configsync/servicemesh/virtual-service.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Route requests to the example external hosts that we added to the service
# registry from the sidecar to the egress gateway service
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: external-hosts-mtls-egress-gateway
  namespace: istio-system
spec:
  hosts:
    - example.com
    - httpbin.org
  gateways:
    - mesh
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            subset: target-egress-gateway-mTLS
            port:
              number: 80
          weight: 100
...
---
# Route from the egress gateway to the example.com service that we added to the
# service registry
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: example-com-through-egress-gateway
  namespace: istio-system
spec:
  hosts:
    - example.com
  gateways:
    - istio-system/egress-gateway
  http:
    - match:
        - gateways:
            - istio-system/egress-gateway
          port: 80
      route:
        - destination:
            host: example.com
            port:
              number: 80
          weight: 100
...
---
# Route from the egress gateway to the httbin.org service that we added to the
# service registry
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-through-egress-gateway
  namespace: istio-system
spec:
  hosts:
    - httpbin.org
  gateways:
    - istio-system/egress-gateway
  http:
    - match:
        - gateways:
            - istio-system/egress-gateway
          port: 80
      route:
        - destination:
            host: httpbin.org
            port:
              number: 80
          weight: 100
...
